[gd_scene load_steps=18 format=3 uid="uid://c0d7dvfgwb76d"]

[ext_resource type="Texture2D" uid="uid://cfau2duojvd33" path="res://addons/konado/runtime/assets/KonadoBanner.png" id="1_lfi02"]
[ext_resource type="PackedScene" uid="uid://dyxdkp8jarx78" path="res://addons/konado/editor/view/popup/character/character_edit_window.tscn" id="1_wwbq1"]
[ext_resource type="Script" uid="uid://c4283hxr0yl63" path="res://addons/konado/editor/view/data_manage/knd_data_tree.gd" id="2_f24y4"]
[ext_resource type="Texture2D" uid="uid://dgyi8xxvrfl1" path="res://addons/konado/editor/assets/icon/icon_1.svg" id="3_7vuv8"]
[ext_resource type="Texture2D" uid="uid://b62h640a6knig" path="res://addons/konado/editor/assets/icon/shot.svg" id="3_bngbe"]
[ext_resource type="Texture2D" uid="uid://b7dk2ypmh0q7u" path="res://addons/konado/editor/assets/icon/icon_16.svg" id="5_am0c7"]
[ext_resource type="Texture2D" uid="uid://ccl62lwgduiyn" path="res://addons/konado/editor/assets/icon/folder.svg" id="5_qbxth"]
[ext_resource type="Texture2D" uid="uid://q2w6piu3t1md" path="res://addons/konado/editor/assets/icon/icon_19.svg" id="8_y70an"]
[ext_resource type="Texture2D" uid="uid://clfrj5ldg3i3k" path="res://addons/konado/editor/assets/icon/icon_20.svg" id="9_guuyf"]
[ext_resource type="Texture2D" uid="uid://crrsfagp8citn" path="res://addons/konado/editor/assets/icon/audio.svg" id="10_md0xx"]
[ext_resource type="Texture2D" uid="uid://cpweu1qd7a5or" path="res://addons/konado/editor/assets/icon/icon_18.svg" id="12_guuyf"]
[ext_resource type="PackedScene" uid="uid://bkm04q4xmkal4" path="res://addons/konado/editor/view/popup/background/background_edit.tscn" id="13_0alns"]
[ext_resource type="Script" uid="uid://ep7ruwnvd0fo" path="res://addons/konado/editor/view/popup/character/character_edit_window.gd" id="13_olvie"]
[ext_resource type="Texture2D" uid="uid://b6gkbqbevljtl" path="res://addons/konado/editor/assets/icon/dialogue.svg" id="14_b3p2i"]
[ext_resource type="PackedScene" uid="uid://6i2hxe6fxdt1" path="res://addons/konado/editor/view/popup/bgm/bgm_edit.tscn" id="14_m825n"]
[ext_resource type="Texture2D" uid="uid://cd3005ulx3nv6" path="res://addons/konado/editor/assets/icon/icon_27.svg" id="15_5ob65"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j02lb"]
content_margin_left = 20.0
content_margin_right = 20.0

[node name="data_edit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="editor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="character_edit" parent="editor" instance=ExtResource("1_wwbq1")]
unique_name_in_owner = true
size = Vector2i(1152, 648)

[node name="background_edit" parent="editor" instance=ExtResource("13_0alns")]
unique_name_in_owner = true

[node name="bgm_edit" parent="editor" instance=ExtResource("14_m825n")]
unique_name_in_owner = true
size = Vector2i(1152, 648)

[node name="background_edit3" type="Window" parent="editor" groups=["Window"]]
unique_name_in_owner = true
auto_translate_mode = 1
editor_description = "文本节点的高级编辑器"
transparent_bg = true
oversampling_override = 1.0
title = "背景编辑"
initial_position = 1
size = Vector2i(1276, 732)
visible = false
transient = true
exclusive = true
transparent = true
min_size = Vector2i(1100, 500)
max_size = Vector2i(3840, 2160)
script = ExtResource("13_olvie")

[node name="character_card" type="Panel" parent="editor/background_edit3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowPanel"

[node name="data_manage" type="SplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_tab_index = 0

[node name="Knd_shot_tree" type="Node" parent="data_manage" node_paths=PackedStringArray("data_tree", "type_tab_bar", "floder_button", "add_button", "delete_button")]
script = ExtResource("2_f24y4")
data_tree = NodePath("../BoxContainer3/BoxContainer/data_manage/BoxContainer/ShotTree")
type_tab_bar = NodePath("../BoxContainer3/BoxContainer/Panel/TypeTabBar2")
floder_button = NodePath("../BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2/folder")
add_button = NodePath("../BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2/shot_add")
delete_button = NodePath("../BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2/delete")

[node name="Knd_data_tree" type="Node" parent="data_manage" node_paths=PackedStringArray("data_tree", "type_tab_bar", "floder_button", "add_button", "delete_button")]
script = ExtResource("2_f24y4")
data_tree = NodePath("../BoxContainer3/BoxContainer2/data_manage/BoxContainer/DataTree")
type_tab_bar = NodePath("../BoxContainer3/BoxContainer2/Panel/ScrollContainer/TypeTabBar")
floder_button = NodePath("../BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2/folder")
add_button = NodePath("../BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2/data_add")
delete_button = NodePath("../BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2/delete")

[node name="project_inf" type="Panel" parent="data_manage"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="data_manage/project_inf"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 16.0
offset_right = -12.0
offset_bottom = 54.0
grow_horizontal = 0
text = "设置"

[node name="BoxContainer2" type="BoxContainer" parent="data_manage/project_inf"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 197.0
offset_right = -29.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
vertical = true

[node name="TextureRect" type="TextureRect" parent="data_manage/project_inf/BoxContainer2"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("1_lfi02")
expand_mode = 1
stretch_mode = 6

[node name="Label2" type="LineEdit" parent="data_manage/project_inf/BoxContainer2"]
layout_mode = 2
placeholder_text = "游戏名称"

[node name="TextEdit" type="TextEdit" parent="data_manage/project_inf/BoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "游戏简介"

[node name="BoxContainer" type="BoxContainer" parent="data_manage/project_inf/BoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="data_manage/project_inf/BoxContainer2/BoxContainer"]
modulate = Color(1, 1, 1, 0.407843)
layout_mode = 2
size_flags_horizontal = 3
text = "版本号"

[node name="Label2" type="Label" parent="data_manage/project_inf/BoxContainer2/BoxContainer"]
modulate = Color(1, 1, 1, 0.407843)
layout_mode = 2
size_flags_horizontal = 3
text = "2.0"

[node name="LinkButton" type="LinkButton" parent="data_manage/project_inf"]
layout_mode = 0
offset_left = 36.0
offset_top = 19.0
offset_right = 183.0
offset_bottom = 59.0
text = "Konado"
uri = "https://godothub.com/konado/"

[node name="BoxContainer3" type="SplitContainer" parent="data_manage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="BoxContainer" type="BoxContainer" parent="data_manage/BoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
vertical = true

[node name="Panel" type="Panel" parent="data_manage/BoxContainer3/BoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="TypeTabBar2" type="TabBar" parent="data_manage/BoxContainer3/BoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_selected_color = Color(1, 0.69538736, 0.9455636, 1)
theme_override_constants/tab_separation = 60
theme_override_constants/icon_max_width = 65
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_j02lb")
theme_override_styles/button_pressed = SubResource("StyleBoxEmpty_j02lb")
theme_override_styles/button_highlight = SubResource("StyleBoxEmpty_j02lb")
current_tab = 0
tab_alignment = 1
tab_count = 1
tab_0/title = "镜头"
tab_0/tooltip = "KND_Shot"
tab_0/icon = ExtResource("3_bngbe")

[node name="data_manage" type="Panel" parent="data_manage/BoxContainer3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="BoxContainer" type="BoxContainer" parent="data_manage/BoxContainer3/BoxContainer/data_manage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="ShotTree" type="Tree" parent="data_manage/BoxContainer3/BoxContainer/data_manage/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
hide_root = true
select_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="data_manage/BoxContainer3/BoxContainer/data_manage/BoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="folder" type="Button" parent="data_manage/BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
icon = ExtResource("5_qbxth")
icon_alignment = 1

[node name="shot_add" type="Button" parent="data_manage/BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
icon = ExtResource("3_7vuv8")
icon_alignment = 1

[node name="delete" type="Button" parent="data_manage/BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("5_am0c7")
icon_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="data_manage/BoxContainer3"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
vertical = true

[node name="Panel" type="Panel" parent="data_manage/BoxContainer3/BoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="data_manage/BoxContainer3/BoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TypeTabBar" type="TabBar" parent="data_manage/BoxContainer3/BoxContainer2/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_selected_color = Color(1, 0.69538736, 0.9455636, 1)
theme_override_constants/tab_separation = 60
theme_override_constants/icon_max_width = 65
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_j02lb")
theme_override_styles/button_pressed = SubResource("StyleBoxEmpty_j02lb")
theme_override_styles/button_highlight = SubResource("StyleBoxEmpty_j02lb")
current_tab = 0
tab_count = 6
tab_0/title = "角色"
tab_0/tooltip = "KND_Character"
tab_0/icon = ExtResource("8_y70an")
tab_1/title = "场景"
tab_1/tooltip = "KND_Background"
tab_1/icon = ExtResource("9_guuyf")
tab_2/title = "BGM"
tab_2/tooltip = "KND_Bgm"
tab_2/icon = ExtResource("10_md0xx")
tab_3/title = "语音"
tab_3/tooltip = "KND_Voice"
tab_3/icon = ExtResource("14_b3p2i")
tab_4/title = "模板"
tab_4/tooltip = "KND_Template"
tab_4/icon = ExtResource("12_guuyf")
tab_5/title = "变量"
tab_5/icon = ExtResource("15_5ob65")
tab_5/disabled = true

[node name="data_manage" type="Panel" parent="data_manage/BoxContainer3/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="BoxContainer" type="BoxContainer" parent="data_manage/BoxContainer3/BoxContainer2/data_manage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="DataTree" type="Tree" parent="data_manage/BoxContainer3/BoxContainer2/data_manage/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
hide_root = true
select_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="data_manage/BoxContainer3/BoxContainer2/data_manage/BoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="folder" type="Button" parent="data_manage/BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
icon = ExtResource("5_qbxth")
icon_alignment = 1

[node name="data_add" type="Button" parent="data_manage/BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
icon = ExtResource("3_7vuv8")
icon_alignment = 1

[node name="delete" type="Button" parent="data_manage/BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("5_am0c7")
icon_alignment = 1

[connection signal="close_requested" from="editor/background_edit3" to="editor/background_edit3" method="_on_close_requested"]
[connection signal="tab_changed" from="data_manage/BoxContainer3/BoxContainer/Panel/TypeTabBar2" to="data_manage/Knd_data_tree" method="_on_type_tab_bar_tab_changed"]
[connection signal="pressed" from="data_manage/BoxContainer3/BoxContainer/data_manage/BoxContainer/HBoxContainer2/folder" to="data_manage" method="_on_copy_pressed"]
[connection signal="pressed" from="data_manage/BoxContainer3/BoxContainer2/data_manage/BoxContainer/HBoxContainer2/folder" to="data_manage" method="_on_copy_pressed"]
